--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
     justify-content: center;
     align-items: center;
     gap: 50px;
+    text-align: center;
 }
 
 .select{
@@ -25,5 +26,15 @@
 .box:hover{
     width: 350px;
     transition: 0.5s all ease;
+}
+.score{
+    
+}
+.result{
+    text-transform: uppercase;
+}
+
+.reset{
+    visibility: hidden;
 }
 
